start screen, end screen, score, timer, delivery locations, so on and so forth, i'm tired

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+EditorStartupMap=/Game/Levels/Start.Start
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -136,7 +136,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/ScoreGI.ScoreGI_C
 GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
